@@ -28,10 +28,44 @@ my @sqrtmods = (
  [ 1, 0, undef],
  [ 0, 1, 0],
  [ 1, 1, 0],
- [ 58, 101, 19],
- [ 111, 113, 26],
- [ "9223372036854775808", "5675921253449092823", "22172359690642254" ],
- [ "18446744073709551625", "340282366920938463463374607431768211507", "57825146747270203522128844001742059051" ],
+
+ # prime moduli
+ [ -1, 17, [4,13], 1 ],  # github #51
+ [ 58, 101, [19,82], 1 ],
+ [ 111, 113, [26,87], 1 ],
+ [ 160, 461, undef ],
+ [ 37, 999221, [9946,989275], 1 ],
+ [ 30, 1000969, [89676,911293], 1 ],
+ [ "9223372036854775808", "5675921253449092823", ["22172359690642254","5653748893758450569"], 1 ],
+ [ "18446744073709551625", "340282366920938463463374607431768211507", ["57825146747270203522128844001742059051","282457220173668259941245763430026152456"], 1 ],
+ [ 2, 72388801, [20312446,52076355], 1 ],
+ [ "-4", "1237940039285380274899124357", "308727982714471394151986086" ],
+
+ # composite moduli
+ [ 30, 74, [20,54] ],
+ [ 56, 1018, [458,560] ],
+ [ 42, 979986, [356034,623952] ],
+ [ 5, 301, undef ],
+ [ 5, 302, [55,247] ],
+ [ 5, 404, [45,157,247,359] ],
+ [ 5, 400, undef ],
+ [ 9, 400, [3,53,147,197,203,253,347,397] ],
+ [ 15, 402, [45,357] ],
+ [ 1242, 1849, [851, 998] ],  # prime power
+ [ 0, 4, [0,2] ],
+ [ 1, 4, [1,3] ],
+ [ 4, 8, [2,6] ],        # github #52
+ [ 4, 16, [2,6,10,14] ],
+ [ 0, 9, [0,3,6] ],
+ [ 3, 9, undef ],
+ [ 0, 27, [0,9,18] ],
+ [ 9, 27, [3,6,12,15,21,24] ],
+ [ 0, 36, [0,6,12,18,24,30] ],
+ [ 4, 36, [2,16,20,34] ],
+ [ 13556, 26076, undef ],
+ [ 15347, 38565, undef ],
+ [ 588,2912, undef ],
+ [ 24684, 69944, [2138,17126,17846,32834,37110,52098,52818,67806] ],
 );
 
 plan tests => 0
@@ -56,8 +90,23 @@ foreach my $r (@invmods) {
 
 ###### sqrtmod
 foreach my $r (@sqrtmods) {
-  my($a, $n, $exp) = @$r;
-  is( sqrtmod($a,$n), $exp, "sqrtmod($a,$n) = ".((defined $exp)?$exp:"<undef>") );
+  my($a, $n, $exp, $prime) = @$r;
+  if (!defined $exp) {
+    is( sqrtmod($a,$n), $exp, "sqrtmod($a,$n) = <undef>");
+    #is_deeply( [allsqrtmod($a,$n)], [], "allsqrtmod($a,$n) = ()");
+  } elsif (!ref($exp)) {
+    is( sqrtmod($a,$n), $exp, "sqrtmod($a,$n) = $exp");
+    #is_deeply( [allsqrtmod($a,$n)], [$exp], "allsqrtmod($a,$n) = ($exp)");
+  } else {
+    my $val = sqrtmod($a,$n);
+    if ($prime) {
+        # sqrtmod() must return least root for prime modulus
+        is($val, $exp->[0], "sqrtmod($a,$n) = $exp->[0]");
+    } else {
+        ok( is_one_of($val, @$exp), "sqrtmod($a,$n) = $val, roots [@$exp]" );
+    }
+    #is_deeply([allsqrtmod($a,$n)], $exp, "allsqrtmod($a,$n) = (@$exp)");
+  }
 }
 
 ##########################################################################
@@ -191,4 +240,18 @@ is_deeply( \@res, \@exp, "mulsubmod on ".($num+1)." random inputs" );
 
 sub nrand {
   return Math::Prime::Util::GMP::urandomb($use64 ? 64 : 32);
+}
+
+sub is_one_of {
+  my($n, @list) = @_;
+  if (defined $n) {
+    for (@list) {
+      return 1 if defined $_ && $n eq $_;
+    }
+  } else {
+    for (@list) {
+      return 1 if !defined $_;
+    }
+  }
+  0;
 }
